--- a/native-token/Cargo.toml
+++ b/native-token/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "token"
+name = "native-token"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = "0.9.3"
-borsh-derive = "0.9.1"
-solana-program = "1.16.10"
-spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }
-spl-associated-token-account = { version = "2.0.0", features = [ "no-entrypoint" ] }
-mpl-token-metadata = { version = "1.11", features = [ "no-entrypoint" ] }
+borsh = "1.5.7"
+solana-program = "2.2.1"
+spl-token = "8.0.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
