--- a/native-token/Cargo.toml
+++ b/native-token/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2021"
 
 
 [dependencies]
-borsh = "1.5.7"
-solana-program = "2.2.1"
+borsh = "0.9.3"
+borsh-derive = "0.9.1"
+solana-program = "1.16.10"
 spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
-mpl-token-metadata = "5.1.0"
+metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
+
 
 [lib]
 crate-type = ["cdylib", "lib"]
