--- a/native-account-data/package.json
+++ b/native-account-data/package.json
@@ -3,14 +3,23 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "dependencies": {
+    "@solana/web3.js": "^1.47.3",
+    "fs": "^0.0.1-security"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/bn.js": "^5.1.0",
+    "solana-bankrun": "^0.3.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "scripts":{
-    "test": "bun run tests/account-data.ts",
-    "build": "cargo build-sbf --manifest-path=./account-data/Cargo.toml --sbf-out-dir=./account-data/target/so"
+  "scripts": {
+    "test": "bun test tests/account-data.test.ts --timeout 1000000",
+    "test:watch": "bun test tests/account-data.test.ts --watch",
+    "build": "cargo build-sbf --manifest-path=./account-data/Cargo.toml --sbf-out-dir=./account-data/target/so",
+    "build-and-test": "bun run build && bun run test",
+    "deploy": "solana program deploy ./account-data/target/so/account_data.so"
   }
 }
