--- a/native-account-data/package.json
+++ b/native-account-data/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "test": "bun test tests/account-data.test.ts --timeout 1000000",
+    "devnet": "bun run tests/devnet.ts --timeout 1000000",
     "test:watch": "bun test tests/account-data.test.ts --watch",
     "build": "cargo build-sbf --manifest-path=./account-data/Cargo.toml --sbf-out-dir=./account-data/target/so",
     "build-and-test": "cargo build-sbf --manifest-path=./account-data/Cargo.toml --sbf-out-dir=./tests/fixtures && bun run test",
