--- a/native-pda-crud/pda_crud/Cargo.toml
+++ b/native-pda-crud/pda_crud/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 borsh = "1.5.7"
 solana-program = "2.3.0"
+solana-system-interface = "1.0.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
