--- a/native-escrow/escrow/Cargo.toml
+++ b/native-escrow/escrow/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 borsh = "1.5.7"
 solana-program = "2.3.0"
 solana-system-interface = "1.0.0"
+spl-token = "8.0.0"
+spl-token-2022 = "9.0.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
