--- a/native-create-token/create_token/Cargo.toml
+++ b/native-create-token/create_token/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 
 [dependencies]
 borsh = "1.5.7"
-mpl-token-metadata = "5.1.0"
 solana-program = "2.3.0"
-spl-associated-token-account = "7.0.0"
-spl-token = "8.0.0"
+solana-system-interface = "1.0.0"
+spl-token = { version = "8.0.0", features = [ "no-entrypoint" ]}
+mpl-token-metadata =  "5.1.0"
+spl-associated-token-account = { version = "7.0.0", features = [ "no-entrypoint" ]}
+
 
 [lib]
 crate-type = ["cdylib", "lib"]
