--- a/native-create-token/package.json
+++ b/native-create-token/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.47.3",
     "fs": "^0.0.1-security"
   },
