--- a/misc/accounts/Cargo.toml
+++ b/misc/accounts/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+solana-client = "2.3.2"
 solana-sdk = "2.3.1"
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"]}
