--- a/native-escrow/escrow/Cargo.toml
+++ b/native-escrow/escrow/Cargo.toml
@@ -2,10 +2,13 @@
 name = "escrow"
 version = "0.1.0"
 edition = "2021"
+authors = ["arjun  <@4rjunc>"]
 
 [dependencies]
 borsh = "1.5.7"
+mollusk-svm = "0.4.0"
 solana-program = "2.3.0"
+solana-sdk = "2.3.1"
 solana-system-interface = "1.0.0"
 spl-token = "8.0.0"
 spl-token-2022 = "9.0.0"
