--- a/native-escrow/package.json
+++ b/native-escrow/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.47.3",
     "fs": "^0.0.1-security"
   },
