--- a/native-escrow/escrow/Cargo.toml
+++ b/native-escrow/escrow/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["arjun  <@4rjunc>"]
 borsh = "1.5.7"
 solana-program = "2.3.0"
 spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
+spl-token-2022 = {version = "9.0.0", features = ["no-entrypoint"]}
 
 [lib]
 crate-type = ["cdylib", "lib"]
