--- a/native-escrow/package.json
+++ b/native-escrow/package.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.47.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "litesvm": "^0.2.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/bn.js": "^5.1.0",
-    "solana-bankrun": "^0.3.0"
+    "@types/bn.js": "^5.1.0"
   },
   "scripts": {
     "test": "bun test tests/escrow.test.ts --timeout 1000000",
