--- a/anchor-bonding-curve/Anchor.toml
+++ b/anchor-bonding-curve/Anchor.toml
@@ -12,7 +12,7 @@ bonding_curve = "9k23tjYUuhUq9AJVdsGU81FXiSTd2qjCGsqt2K7uNc8D"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
