--- a/anchor-bonding-curve/programs/bonding-curve/Cargo.toml
+++ b/anchor-bonding-curve/programs/bonding-curve/Cargo.toml
@@ -22,7 +22,9 @@ custom-panic = []
 
 [dependencies]
 anchor-lang = { version="0.32.1", features=["init-if-needed"]}
-
+anchor-spl = { version="0.29.0", features = ["metadata"] }
+spl-memo = "=4.0.0"
+spl-token = "=4.0.0"  
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
