test: add client code for create mint

--- a/anchor-spl-token/Anchor.toml
+++ b/anchor-spl-token/Anchor.toml
@@ -12,7 +12,7 @@ spl_token = "96KJa3QnFirfkBGYqfkpirVbaMWAFYyhPVpq2a1dHmwz"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
